--- a/jenkins-ui-api-nodejs/.env
+++ b/jenkins-ui-api-nodejs/.env
@@ -1,8 +1,8 @@
 JENKINS_USERNAME=fsbano
 JENKINS_API_KEY=11a9a8a98d8d6221341cdb1435c33cf3de
-JENKINS_API_BASE_URL=192.168.1.102:8080
+JENKINS_API_BASE_URL=jenkins:8080
 
-DB_HOST=192.168.1.102
+DB_HOST=postgres
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
